[package]
name = "datastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
codegen-units = 1000

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
debug = true